# g-nfl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA.md  Makefile  README.md  RESOURCES.md  TODO.md  brainstorm.md  fix_mnf_constraint.sql  fix_mnf_pick_type.sql  picks_schema.sql  pyproject.toml  requirements.txt  streamlit_requirements.txt  update_picks_schema.sql
app/: main.py  streamlit_app.py
app/pages/: manage_spreads.py  view_picks.py
notebooks/: analytics-with-eager.ipynb  elo-scrapers-nba.ipynb  elo-scrapers.ipynb  guess-the-line-pipeline.ipynb  guess-the-lines.ipynb  homers-analysis.ipynb  homers-data-processing.ipynb  market-implied-power-ratings.ipynb  nfl-data-py-exploration.ipynb  pff-prop-eval.ipynb  template.ipynb  we-are-homers.ipynb
notebooks/analysis/: kickers.ipynb  pass_rate_over_expectation.ipynb
notebooks/archive/: elo-scrapers-nba.ipynb  elo-scrapers.ipynb  google_sheet_test.ipynb  guess-the-line-pipeline.ipynb  homers-data-processing.ipynb  market-implied-power-ratings.ipynb  pff-prop-eval.ipynb  weekly-report.ipynb  win-perc-spread.ipynb
notebooks/eager/: analytics-with-eager.ipynb
notebooks/fantasy/: rb.ipynb  reciever_metrics.ipynb  target_share.ipynb
notebooks/model/: 01-gr-initial-team-model.ipynb
notebooks/picks/: pick-pipeline.ipynb  pipeline-rough-draft.ipynb  scoreboard.ipynb
notebooks/ratings/: epa-analysis.ipynb  injuries.ipynb  qb.ipynb  (+4 more)
scripts/: FIX_POOL_SPREADS_README.md  create_database_tables.py  database_schema.sql  deploy_prep.py  fix_pool_spreads_game_ids.sql  update_market_lines.py  verify_tables.py
src/: bet-analysis.ipynb  betting-utils.py  config.py  data_collection.ipynb  homers.py  market-implied-power-ratings.ipynb  nfl-data-py-exploration.ipynb  old-utils.py  schedule-scraper.ipynb  scrapers.py  utils.py  visualisation.py
(+51 files in other folders)
