[tool.poetry]
name = "g-nfl"
version = "0.1.0"
description = "The cleveland browns can stay irrational longer than i can stay solvent"
authors = ["Griffin Reichert <griffin.reichert@gmail.com>"]
readme = "README.md"
packages = [{ include = "g_nfl", from = 'src' }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "1.26"
nfl-data-py = "^0.3.1"
bs4 = "^0.0.2"
selenium = "^4.22.0"
scikit-learn = "^1.5.1"
plotly = "^5.22.0"
jupyter = "^1.0.0"
jupyter-black = "^0.3.4"
requests = "^2.32.3"
ipykernel = "^6.29.5"
gspread = "^6.1.2"
pre-commit = "^3.7.1"
matplotlib = "^3.9.0"
tqdm = "^4.66.5"
adjusttext = "^1.2.0"
statsmodels = "^0.14.2"
xgboost = "^2.1.1"
joblib = "^1.4.2"
lxml = "^5.3.0"
streamlit = "^1.47.1"
tabulate = "^0.9.0"
supabase = "^2.0.0"
psycopg = "^3.2.9"
python-dotenv = "^1.0.0"
watchdog = "^6.0.0"
nflreadpy = "^0.1.4"
poetry-plugin-export = "^1.9.0"


[tool.poetry.scripts]
app = "app.main:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
